--- a/ProFarmacia/ProFarmacia/template/Farmacia/inventario.html
+++ b/ProFarmacia/ProFarmacia/template/Farmacia/inventario.html
@@ -32,7 +32,7 @@
                 <li><a href="/Rginventario/">Registrar Inventario</a></li>
                 <li><a href="/Ventas/">Ventas</a></li>
                 <li><a href="/Imprimir_reportes/">Reportes Ventas</a></li>
-                <li><a href="#">Buy Now</a></li>
+                <li><a href="#">Ayuda</a></li>
             </ul>
         </div>
         <span class="element-divider place-right"></span>
