--- a/ProFarmacia/ProFarmacia/template/index.html
+++ b/ProFarmacia/ProFarmacia/template/index.html
@@ -2,7 +2,7 @@
 {% block contenido %}
 <div class="tile-area tile-area-dark">
 
-        <h1 class="tile-area-title fg-white">Su Farmacia mas Cercana</h1>
+        <h1 class="tile-area-title fg-white">Bienvenido</h1>
 
         
         	<div class="user-id">
@@ -36,7 +36,7 @@
                     <div class="email-data">
                         <span class="email-data-title">Barak Obama</span>
                         <span class="email-data-subtitle">Aprueba este sistema</span>
-                        <span class="email-data-text">I para toda la poblcion mundial</span>
+                        <span class="email-data-text"></span>
                     </div>
                 </div>
                 <div class="tile-content email">
@@ -45,8 +45,8 @@
                     </div>
                     <div class="email-data">
                         <span class="email-data-title">Jolie &amp; Bred</span>
-                        <span class="email-data-subtitle">You're invited</span>
-                        <span class="email-data-text">I hope that you can make and make</span>
+                        <span class="email-data-subtitle">Yo le invito a Aprovechar</span>
+                        <span class="email-data-text">Este Sistema de busqueda</span>
                     </div>
                 </div>
 
@@ -55,9 +55,9 @@
                         <img src="{{STATIC_URL}}images/obama.jpg">
                     </div>
                     <div class="email-data">
-                        <span class="email-data-title">Arny</span>
-                        <span class="email-data-subtitle">You're invited</span>
-                        <span class="email-data-text">I hope that you can make and make</span>
+                        <span class="email-data-title">Obama</span>
+                        <span class="email-data-subtitle">Yo le invito a Aprovechar</span>
+                        <span class="email-data-text">Este Sistema de busqueda</span>
                     </div>
                 </div>
                 <div class="brand">
@@ -66,11 +66,14 @@
                 </div>
             </a> <!-- end tile -->
 
-            <a class="tile double bg-violet" data-click="transform">
+            <a class="tile double bg-blue" data-click="transform">
                 <div class="tile-content">
                     <div class="text-right padding10 ntp">
-                        <h1 class="fg-white no-margin">10</h1>
-                        <p class="fg-white">Sunday</p>
+                        <h1 class="fg-white no-margin" id="Dia"></h1>
+                        <p class="fg-white" id="NombreDia">Sunday</p>
+                        <form name="Tick">
+                            <input type="text" size="8" name="Clock" />
+                        </form>
                     </div>
                 </div>
                 <div class="brand">
@@ -91,6 +94,7 @@
             </div> <!-- end tile -->
             
             <!-- small tiles -->
+
             <a href="#" class="tile half bg-darkRed" data-click="transform">
                 <div class="tile-content icon">
                     <span class="icon-camera"></span>
@@ -117,8 +121,8 @@
             <!-- end small tiles -->
 
             <a class="tile double double-vertical bg-steel" data-click="transform">
-                <div class="tile-content" style="background: url({{STATIC_URL}}images/clouds2.png)">
-                    <div class="padding10">
+                <div class="tile-content" style="background: url({{STATIC_URL}}images/cloud3.jpg)">
+                    <!--<div class="padding10">
                         <h1 class="fg-white ntm">57&deg;</h1>
                         <h2 class="fg-white no-margin">Potosi</h2>
                         <h5 class="fg-white no-margin">Bolivia</h5>
@@ -126,11 +130,13 @@
                         <p class="tertiary-text fg-white">0&deg;/5&deg; Mostly Clear</p>
                         <p class="tertiary-text fg-white no-margin">Tomorrow</p>
                         <p class="tertiary-text fg-white">0&deg;/8&deg; Mostly Clear</p>
-                    </div>
-
+                    </div>-->
+                    <center>
+                    <div id="tyt_wdgt_1404709870569" style="overflow:hidden;width:182px;height:255px" data-options="color=azul&text=txt-verdana&content=0011000&temp_unit=c&wind_unit=kmh"><script src="http://tiempoytemperatura.es/widgets/js/little-2days/3907584/tyt_wdgt_1404709870569/?v=0"></script></div>
+                    </center>
                 </div>
                 <div class="tile-status">
-                    <div class="label">Weather</div>
+                    <div class="label"></div>
                 </div>
             </a> <!-- end tile -->
 
@@ -162,23 +168,24 @@
                 </div>
             </a>
 
-            <a class="tile double bg-lightBlue" data-click="transform" href="#">
+            <a class="tile double bg-lightBlue" data-click="transform" href="/MostrarFyM/">
                 <div class="tile-content image">
-                    <img src="{{STATIC_URL}}images/medicamentos (4).jpg">
+                    <img src="{{STATIC_URL}}images/Search.png" style="height:123px;width:250px">
                 </div>
                 <div class="brand">
-                    <div class="label">MedicamentosSSS</div>
+                    <div class="label" style="Color:Black">Busque Su Farmacia Preferida</div>
+                </div>
+            </a>
+             <a class="tile double bg-lightBlue" data-click="transform" href="/Buscar_Mcercano/">
+                <div class="tile-content image">
+                    <img src="{{STATIC_URL}}images/Google Maps.png" style="height:123px;width:250px">
+                </div>
+                <div class="brand">
+                    <div class="label" style="Color:Black">Su Medicamento mas cerca</div>
                 </div>
             </a>
 
-            <a class="tile double bg-darkGreen" data-click="transform" href="/Buscar_Global/">
-                <div class="tile-content icon">
-                    <span class="icon-cart-2"></span>
-                </div>
-                <div class="brand">
-                    <div class="label">Buscar Medicamento</div>
-                </div>
-            </a>
+            
         </div> <!-- End group -->
 
         
@@ -291,6 +298,45 @@
         <!-- /////////////////////////////////////////////////////////////7 -->
 
 </div>
+
+<div>
+<script>
+<!--
+/*By George Chiang (WA's JavaScript tutorial)
+
+Credit must stay intact for use*/
+function show(){
+var Digital=new Date()
+var hours=Digital.getHours()
+var minutes=Digital.getMinutes()
+var seconds=Digital.getSeconds()
+var dn="AM" 
+if (hours>12){
+dn="PM"
+hours=hours-12
+}
+if (hours==0)
+hours=12
+if (minutes<=9)
+minutes="0"+minutes
+if (seconds<=9)
+seconds="0"+seconds
+document.Tick.Clock.value=hours+":"+minutes+":"
++seconds+" "+dn
+setTimeout("show()",1000)
+}
+show()
+//-->
+
+
+var meses = new Array ("Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre");
+var diasSemana = new Array("Domingo","Lunes","Martes","Miércoles","Jueves","Viernes","Sábado");
+var f=new Date();
+//document.write(diasSemana[f.getDay()] + ", " + f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYear());
+document.getElementById('Dia').innerHTML = f.getDate();
+document.getElementById('NombreDia').innerHTML = diasSemana[f.getDay()] + ", " + f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYear();
+</script>
+
 
 
 
