--- a/ProFarmacia/ProFarmacia/template/Busqueda/Buq_Med_Cercano.html
+++ b/ProFarmacia/ProFarmacia/template/Busqueda/Buq_Med_Cercano.html
@@ -260,7 +260,7 @@ $(document).ready(UbicacionFarmcia);
 <div id="rutaOps" >
     <select id="modo_viaje" class="routeOptions">
         <option value="DRIVING" selected="selected">Auto</option>
-        <option value="BICYCLING">Bicicleta</option>
+        <!--<option value="BICYCLING">Bicicleta</option>-->
         <option value="WALKING">Caminando</option>
     </select>
     <select id="tipo_sistema" class="unitSystem">
