--- a/ProFarmacia/ProFarmacia/template/base.html
+++ b/ProFarmacia/ProFarmacia/template/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="{{STATIC_URL}}images/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="{{STATIC_URL}}css/metro-bootstrap.css">
      <script src="{{STATIC_URL}}js/jquery/jquery.min.js"></script>
@@ -101,6 +102,6 @@
         {% endblock %}
     {% endblock %}
    <!--<script src="{{STATIC_URL}}js/hitua.js"></script>-->
-
+<!--<link rel="shortcut icon" type="image/x-icon" href="{{STATIC_URL}}images/favicon.ico">-->
 </body>
 </html>
