--- a/ProFarmacia/ProFarmacia/template/base.html
+++ b/ProFarmacia/ProFarmacia/template/base.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <link rel="icon" href="{{STATIC_URL}}images/favicon.ico" type="image/x-icon">
-
     <link rel="stylesheet" href="{{STATIC_URL}}css/metro-bootstrap.css">
      <script src="{{STATIC_URL}}js/jquery/jquery.min.js"></script>
      <script src="{{STATIC_URL}}js/jquery/jquery.widget.min.js"></script>
@@ -100,8 +99,9 @@
 
         {% block B_global %}
         {% endblock %}
+
+        {% block AyudaNav%}
+        {% endblock %}
     {% endblock %}
-   <!--<script src="{{STATIC_URL}}js/hitua.js"></script>-->
-<!--<link rel="shortcut icon" type="image/x-icon" href="{{STATIC_URL}}images/favicon.ico">-->
 </body>
 </html>
