--- a/ProFarmacia/ProFarmacia/template/index.html
+++ b/ProFarmacia/ProFarmacia/template/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block contenido %}
+
 <div class="tile-area tile-area-dark">
 
         <h1 class="tile-area-title fg-white">Bienvenido</h1>
@@ -66,7 +67,7 @@
                 </div>
             </a> <!-- end tile -->
 
-            <a class="tile double bg-blue" data-click="transform">
+            <a class="tile double bg-green" data-click="transform">
                 <div class="tile-content">
                     <div class="text-right padding10 ntp">
                         <h1 class="fg-white no-margin" id="Dia"></h1>
@@ -122,15 +123,6 @@
 
             <a class="tile double double-vertical bg-steel" data-click="transform">
                 <div class="tile-content" style="background: url({{STATIC_URL}}images/cloud3.jpg)">
-                    <!--<div class="padding10">
-                        <h1 class="fg-white ntm">57&deg;</h1>
-                        <h2 class="fg-white no-margin">Potosi</h2>
-                        <h5 class="fg-white no-margin">Bolivia</h5>
-                        <p class="tertiary-text fg-white no-margin">Today</p>
-                        <p class="tertiary-text fg-white">0&deg;/5&deg; Mostly Clear</p>
-                        <p class="tertiary-text fg-white no-margin">Tomorrow</p>
-                        <p class="tertiary-text fg-white">0&deg;/8&deg; Mostly Clear</p>
-                    </div>-->
                     <center>
                     <div id="tyt_wdgt_1404709870569" style="overflow:hidden;width:182px;height:255px" data-options="color=azul&text=txt-verdana&content=0011000&temp_unit=c&wind_unit=kmh"><script src="http://tiempoytemperatura.es/widgets/js/little-2days/3907584/tyt_wdgt_1404709870569/?v=0"></script></div>
                     </center>
@@ -189,113 +181,26 @@
         </div> <!-- End group -->
 
         
-       <!-- <div class="tile-group one">
-            <div class="tile-group-title">Medicamentos</div>
-            <a class="tile half bg-darkBlue" data-click="transform" href="#">
-                <div class="tile-content icon">
-                    <img src="{{STATIC_URL}}images/word.png">
-                </div>
-            </a>
-            <a class="tile half bg-darkGreen" data-click="transform">
-                <div class="tile-content icon">
-                    <img src="{{STATIC_URL}}images/excel.png">
-                </div>
-            </a>
-            <a class="tile half bg-darkPink" data-click="transform">
-                <div class="tile-content icon">
-                    <img src="{{STATIC_URL}}images/onenote.png">
-                </div>
-            </a>
-            <a class="tile half bg-orange" data-click="transform">
-                <div class="tile-content icon">
-                    <img src="{{STATIC_URL}}images/powerpoint.png">
-                </div>
-            </a>
-            <a class="tile half bg-lightBlue" data-click="transform">
-                <div class="tile-content icon">
-                    <img src="{{STATIC_URL}}images/outlook.png">
-                </div>
-            </a>
-            <a class="tile half bg-darkRed" data-click="transform">
-                <div class="tile-content icon">
-                    <img src="{{STATIC_URL}}images/access.png">
-                </div>
-            </a>
-        </div> --><!-- End tile group -->
+       
 
         <div class="tile-group double">
             <div class="tile-group-title">Medicametos mas buscados</div>
-        <!--    <div>     
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d122403.41295297751!2d-68.0915129!3d-16.52071235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sbo!4v1401166766506" width="600" height="450" frameborder="0" style="border:0"></iframe>
-</div> -->
-            <div class="tile bg-dark" data-click="transform">
-                <div class="tile-content icon">
-                    <img src="{{STATIC_URL}}images/medicamentoss.jpg">
-                </div>
-                <div class="brand">
-                    <div class="label">Sanatusin</div>
-                </div>
+
+            <div>
+    
+                 <table style="background-color:#1d1d1d;">
+                    
+                        {%for item in Medicamentos%}
+                    <tr>
+                        <td><h3><a href="/Buscar_Mcercano/">{{item.Name_med}}</a></h3></td>
+                    </tr>
+                        {%endfor%}
+                </table>
+
             </div>
-            <div class="tile bg-dark" data-click="transform">
-                <div class="tile-content icon">
-                    <img src="{{STATIC_URL}}images/medicamento1.jpg">
-                </div>
-                <div class="brand">
-                    <div class="label">Calmantes</div>
-                </div>
-            </div>
-            <div class="tile bg-dark" data-click="transform">
-                <div class="tile-content icon">
-                    <img src="{{STATIC_URL}}images/medicamentos (1).jpg">
-                </div>
-                <div class="brand">
-                    <div class="label">Aspirinas</div>
-                </div>
-            </div>
-            <div class="tile bg-dark" data-click="transform">
-                <div class="tile-content icon">
-                    <img src="{{STATIC_URL}}images/medicamentos.png">
-                </div>
-                <div class="brand">
-                    <div class="label">Dicoflenaco</div>
-                </div>
-            </div>
+
         </div> <!-- End group -->
 
-        <!--
-        <div class="tile-group double">
-            <div class="tile double" data-click="transform">
-                <div class="tile-content image-set">
-                    <img src="{{STATIC_URL}}images/1.jpg">
-                    <img src="{{STATIC_URL}}images/2.jpg">
-                    <img src="{{STATIC_URL}}images/3.jpg">
-                    <img src="{{STATIC_URL}}images/4.jpg">
-                    <img src="{{STATIC_URL}}images/5.jpg">
-                </div>
-            </div>
-            <div class="tile double live" data-role="live-tile" data-effect="slideUpDown" data-click="transform">
-                <div class="tile-content image">
-                    <img src="{{STATIC_URL}}images/1.jpg">
-                </div>
-                <div class="tile-content image">
-                    <img src="{{STATIC_URL}}images/2.jpg">
-                </div>
-                <div class="tile-content image">
-                    <img src="{{STATIC_URL}}images/3.jpg">
-                </div>
-                <div class="tile-content image">
-                    <img src="{{STATIC_URL}}images/4.jpg">
-                </div>
-                <div class="tile-content image">
-                    <img src="{{STATIC_URL}}images/5.jpg">
-                </div>
-
-                <div class="tile-status">
-                    <span class="label">Images</span>
-                </div>
-            </div>
-        </div>-->
-        <!-- /////////////////////////////////////////////////////////////7 -->
 
 </div>
 
@@ -336,9 +241,5 @@ var f=new Date();
 document.getElementById('Dia').innerHTML = f.getDate();
 document.getElementById('NombreDia').innerHTML = diasSemana[f.getDay()] + ", " + f.getDate() + " de " + meses[f.getMonth()] + " de " + f.getFullYear();
 </script>
-
-
-
-
 
 {% endblock %}
